[package]
name = "baid64"
version = "0.4.0"
description = "Easy-to-check URL-safe Base64 encoding for identities"
keywords = ["base64", "encoding", "mnemonic"]
categories = ["encoding", "value-formatting", "command-line-utilities"]
readme = "README.md"
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://github.com/UBIDECO/rust-baid64"
repository = "https://github.com/UBIDECO/rust-baid64"
rust-version = "1.66.0"
edition = "2021"
license = "Apache-2.0"

[lib]

[dependencies]
amplify = { version = "4.7.0", default-features = false, features = ["derive"] }
base64 = { version = "0.22.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
mnemonic = "1.1.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["std"]
all = ["std"]
std = ["amplify/std", "amplify/apfloat_std", "base64/std", "sha2/std"]
alloc = ["amplify/alloc", "amplify/apfloat_alloc", "base64/alloc"]

[patch.crates-io]
amplify = { git = "https://github.com/zoedberg/rust-amplify", branch = "minor_fixes" }
amplify_derive = { git = "https://github.com/zoedberg/amplify-derive", branch = "minor_fixes" }
